Created areaAdmin style and changed areaadmin html.

--- a/views/areaadmin.html
+++ b/views/areaadmin.html
@@ -15,37 +15,23 @@
 			<a class="btn btn-default botaoSairAreaAdmin" href="#/loginadmin">Voltar</a>
 		</div>
 	</div>
+
 	<div class="row">
-		<div class="col-md-4 subcateadmin">
+		<div class="col-md-4 grupos">
 			<a href="#/grupos">Grupos comuns</a>
 		</div>
-		<div class="col-md-4">
-			
-		</div>
-		<div class="col-md-4">
-
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-4 subcateadmin">
+		<div class="col-md-4 categorias">
 			<a href="#/categoriaAdmin">Categorias Comuns</a>
 		</div>
-		<div class="col-md-4">
-			
-		</div>
-		<div class="col-md-4">
-
-		</div>
 	</div>
+
 	<div class="row">
-		<div class="col-md-4 subcateadmin">
+		<div class="col-md-4 subcategorias">
 			<a href="#/subcategoriaAdmin">Subcategorias comuns</a>
 		</div>
-		<div class="col-md-4">
-			
-		</div>
-		<div class="col-md-4">
 
+		<div class="col-md-4 contas">
+			<a href="#/contasAdmin">Contas</a>
 		</div>
 	</div>
 </div>
