Created view areaadmin.html.

--- a/views/areaadmin.html
+++ b/views/areaadmin.html
@@ -31,7 +31,7 @@
 		</div>
 
 		<div class="col-md-4 contas">
-			<a href="#/contasAdmin">Contas</a>
+			<a href="#/contaAdmin">Contas</a>
 		</div>
 	</div>
 </div>
