--- a/views/inicial.html
+++ b/views/inicial.html
@@ -10,11 +10,11 @@
 			<h4>{{empresa}}</h4>
 		</div>
 		<div class="col-md-3 nomeUsuario">
-			<h4>Olá, {{usuario}}</h4>
+			<h4>Olá, {{empresa}}</h4>
 		</div>
 	</div>
 
-	<div ng-include="'views/links.html'"></div>
+	<!-- <div ng-include="'views/links.html'"></div> -->
 	
 	<div class="row">
 		<div class="col-md-4">
