Changed link to register company.

--- a/views/login.html
+++ b/views/login.html
@@ -8,7 +8,7 @@
 				<label class="usuario">E-mail</label> <input class="form-control user" type="text" name="ema" ng-model="usuario.email">
 				<label class="senha">Senha</label> <input class="form-control pass" type="password" name="pass" ng-model="usuario.senha">
 				<button class="btn btn-success" ng-click="logar(usuario)">Entrar</button>
-				<a class="btn btn-success" href="#/cadempresa">Cadastra-se</a>
+				<a class="btn btn-success" href="#/cadastra_empresa">Cadastra-se</a>
 				<div id="escondido"><a href="#loginadmin">Entrada</a></div>
 				<div class="msgErroLogin">{{msgErro}}</div>
 			</form>
