Changed inicial.html file.

--- a/views/inicial.html
+++ b/views/inicial.html
@@ -13,6 +13,14 @@
 			<h4>Olá, {{empresa}}</h4>
 		</div>
 	</div>
+	<div class="links">
+		<div id="contas">
+			<a href="#/contas">Contas</a>
+		</div>
+		<div id="importacao">
+			<a href="#/importacao">Importação</a>
+		</div>
+	</div>
 
 	<!-- <div ng-include="'views/links.html'"></div> -->
 	
