--- a/views/importacao.html
+++ b/views/importacao.html
@@ -25,19 +25,7 @@
 	<!-- <div ng-include="'views/links.html'"></div> -->
 	
 	<div class="row">
-		<div class="col-md-4">
-			<div class="infos">
-				<div class="saldoAtual">
-					Saldo
-				</div>
-				<div class="valorEntrada">
-					Previsão entrada
-				</div>
-				<div class="valorSaida">
-					Previsão saída
-				</div>
-			</div>
-		</div>
+		<div class="col-md-4"></div>
 		<div class="col-md-4"></div>
 		<div class="col-md-4"></div>
 	</div>
