--- a/views/inicial.html
+++ b/views/inicial.html
@@ -14,6 +14,9 @@
 		</div>
 	</div>
 	<div class="links">
+		<div id="inicial">
+			<a href="#/inicial">Inicial</a>
+		</div>
 		<div id="contas">
 			<a href="#/contas">Contas</a>
 		</div>
