Removed all link and using only one.

--- a/views/inicial.html
+++ b/views/inicial.html
@@ -13,7 +13,7 @@
 			<h4>Olá, {{empresa}}</h4>
 		</div>
 	</div>
-	<div class="links">
+	<!-- <div class="links">
 		<div id="inicial">
 			<a href="#/inicial">Inicial</a>
 		</div>
@@ -23,9 +23,12 @@
 		<div id="importacao">
 			<a href="#/importacao">Importação</a>
 		</div>
-	</div>
+		<div id="plano_contas">
+			<a href="#/plano_contas">Plano de contas</a>
+		</div>
+	</div> -->
 
-	<!-- <div ng-include="'views/links.html'"></div> -->
+	<div ng-include="'views/links.html'"></div>
 	
 	<div class="row">
 		<div class="col-md-4">
