Added images of excel sheet.

--- a/views/plano_contas.html
+++ b/views/plano_contas.html
@@ -15,6 +15,20 @@
 	</div>
 
 	<div ng-include="'views/links.html'"></div>
+
+    <div id="plano_de_contas_e_codigo">
+        PLANO DE CONTAS E CÓDIGO
+    </div>
+
+    <div id="imagem_planilha">
+        <img src="imgs/1.png" width="500" height=""><br>
+        <img src="imgs/2.png" width="500" height=""><br>
+        <img src="imgs/3.png" width="500" height=""><br>
+        <img src="imgs/4.png" width="500" height=""><br>
+        <img src="imgs/5.png" width="500" height=""><br>
+        <img src="imgs/6.png" width="500" height=""><br>
+        <img src="imgs/7.png" width="500" height=""><br>
+    </div>
 	
 	<div class="row">
 		<div class="col-md-4"></div>
