Included button to select excel file.

--- a/views/importacao.html
+++ b/views/importacao.html
@@ -13,22 +13,13 @@
 			<h4>Olá, {{empresa}}</h4>
 		</div>
 	</div>
-	<!-- <div class="links">
-		<div id="inicial">
-			<a href="#/inicial">Inicial</a>
-		</div>
-		<div id="contas">
-			<a href="#/contas">Contas</a>
-		</div>
-		<div id="importacao">
-			<a href="#/importacao">Importação</a>
-		</div>
-		<div id="plano_contas">
-			<a href="#/plano_contas">Plano de contas</a>
-		</div>
-	</div> -->
 
 	<div ng-include="'views/links.html'"></div>
+
+	<div class="arquivo" ng-controller="importacaoCtrl">
+        <button type="button" ng-click="uploadExcel()">
+              Selecione Arquivo</button>
+	</div>
 	
 	<div class="row">
 		<div class="col-md-4"></div>
