--- a/views/cadastra_empresa.html
+++ b/views/cadastra_empresa.html
@@ -48,6 +48,8 @@
 			<input class="form-control" ng-model="empresa.cnpj" type="text">
 			IE <br>
 			<input class="form-control" ng-model="empresa.ie" type="text">
+			Usuário <br>
+			<input class="form-control" ng-model="empresa.usuario" type="text">
 			E-mail <br>
 			<input class="form-control" ng-model="empresa.email" type="email">
 			Senha <br>
