Replacing empresa and usuario.

--- a/views/inicial.html
+++ b/views/inicial.html
@@ -7,10 +7,10 @@
 			<div class="fluxojoin"><img src="imgs/fluxojoin.png"></div>
 		</div>
 		<div class="col-md-3 nomeEmpresa">
-			<!-- <h4>{{empresa}}</h4> -->
+			<h4>{{empresa}}</h4>
 		</div>
 		<div class="col-md-3 nomeUsuario">
-			<h4>Olá, {{empresa}}</h4>
+			<h4>Olá, {{usuario}}</h4>
 		</div>
 	</div>
 	<!-- <div class="links">
