Added image to the view.

--- a/views/importacao.html
+++ b/views/importacao.html
@@ -16,6 +16,10 @@
 
 	<div ng-include="'views/links.html'"></div>
 
+	<div id="tela_xlsx">
+		<img src="imgs/tela_xlsx.png" width="750" height=""><br>
+	</div>
+
 	<div class="arquivo" ng-controller="importacaoCtrl">
         <button type="button" ng-click="uploadExcel()">
               Selecione Arquivo</button>
