Created route for contas_importadas.

--- a/views/links.html
+++ b/views/links.html
@@ -11,4 +11,7 @@
     <div id="plano_contas">
         <a href="#/plano_contas">Plano de contas</a>
     </div>
+    <div id="contas_importadas">
+        <a href="#/contas_importadas">Contas importadas</a>
+    </div>
 </div>
