Removed width from descrição.

--- a/views/contas_importadas.html
+++ b/views/contas_importadas.html
@@ -34,7 +34,7 @@
 					<td>{{ci.codigo}}</td>
 					<td>{{ci.tipo}}</td>
 					<td>{{ci.valor}}</td>
-					<td width="550">{{ci.descricao}}</td>
+					<td>{{ci.descricao}}</td>
 				  </tr>
 				</tbody>
 			  </table>
