--- a/views/importacao.html
+++ b/views/importacao.html
@@ -4,7 +4,10 @@
 <div class="container-fluid" ng-controller="InicialCtrl">
 	<div class="row logoFluxojojn">
 		<div class="col-md-6">
-			<div class="fluxojoin"><img src="imgs/fluxojoin.png"></div>
+			<div class="custojoin">
+				<!-- <img src="imgs/fluxojoin.png"> -->
+				Custojoin
+			</div>
 		</div>
 		<div class="col-md-3 nomeEmpresa">
 			<h4>{{empresa}}</h4>
