--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,10 @@
 <div class="container-fluid">
 	<div class="row logoFluxojojn">
 		<div class="col-md-4">
-			<div class="fluxojoin"><img src="imgs/fluxojoin.png"></div>
+			<div class="custojoin">
+				<!-- <img src="imgs/fluxojoin.png"> -->
+				Custojoin
+			</div>
 		</div>
 		<div class="col-md-8 sigin">
 			<form name="loginForm" class="form-signin signin-form" ng-controller="LoginCtrl">
