--- a/views/contas_importadas.html
+++ b/views/contas_importadas.html
@@ -24,20 +24,28 @@
 			<table class="table" id="exibe_contas_importadas">
 				<thead>
 				  <tr>
+					<td>
+						filtrar por 
+						<input type="text" ng-model="descricao" placeholder="descrição">
+					</td>
+				  <tr>
 					<th scope="col">Data</th>
 					<th scope="col">Código</th>
 					<th scope="col">Tipo</th>
 					<th scope="col">Valor</th>
 					<th scope="col">Descrição</th>
+					<th scope="col"></th>
 				  </tr>
 				</thead>
 				<tbody>
-				  <tr ng-repeat="ci in contas_importadas">
+				  <tr ng-repeat="ci in contas_importadas | filter: descricao">
 					<td width="150">{{ci.data}}</td>
 					<td>{{ci.codigo}}</td>
 					<td>{{ci.tipo}}</td>
 					<td>{{ci.valor}}</td>
 					<td>{{ci.descricao}}</td>
+					<td><a class="btn btn-sm btn-warning" 
+						href="#/editar_conta_importada/{{ci.idconta}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 				  </tr>
 				</tbody>
 			  </table>
