Created link for relatorios.

--- a/views/links.html
+++ b/views/links.html
@@ -14,4 +14,7 @@
     <div id="contas_importadas">
         <a href="#/contas_importadas">Contas importadas</a>
     </div>
+    <div id="relatorio_join">
+        <a href="#/relatorios">Relatórios</a>
+    </div>
 </div>
