--- a/views/relatorios.html
+++ b/views/relatorios.html
@@ -20,8 +20,28 @@
 	<div ng-include="'views/links.html'"></div>
 	
 	<div class="row">
-		<div class="col-md-6">
-			<table class="table" id="exibe_contas_importadas">
+		<div class="col-md-6" ng-controller="relatoriosCtrl">
+            <form name="consulta" class="form_consulta">
+                <div id="titulo_mes">
+                    mês
+                </div>
+                <select class="form-control mes_numero" name="mes" ng-model="mes.mes" id="">
+                    <option value="01">Jan</option>
+                    <option value="02">Fev</option>
+                    <option value="03">Mar</option>
+                    <option value="04">Abr</option>
+                    <option value="05">Mai</option>
+                    <option value="06">Jun</option>
+                    <option value="07">Jul</option>
+                    <option value="08">Ago</option>
+                    <option value="09">Set</option>
+                    <option value="10">Out</option>
+                    <option value="11">Nov</option>
+                    <option value="12">Dez</option>
+                </select>
+                <button class="btn btn-success" ng-disabled="consulta.$invalid" ng-click="consultar(mes)">Consultar</button>
+            </form>
+			<!-- <table class="table" id="exibe_contas_importadas">
 				<thead>
 				  <tr>
 					<td>
@@ -48,7 +68,7 @@
 						href="#/editar_conta_importada/{{ci.idconta}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 				  </tr>
 				</tbody>
-			  </table>
+			  </table> -->
 		</div>
 		<div class="col-md-4"></div>
 		<div class="col-md-4"></div>
