--- a/views/relatorios.html
+++ b/views/relatorios.html
@@ -25,7 +25,10 @@
                 <div id="titulo_mes">
                     mês
                 </div>
-                <select class="form-control mes_numero" name="mes" ng-model="mes.mes" id="">
+                <select class="form-control dia_numero" name="mes" ng-model="data.dia" id="">
+                    <option value="01">01</option>
+                </select>
+                <select class="form-control mes_numero" name="mes" ng-model="data.mes" id="">
                     <option value="01">Jan</option>
                     <option value="02">Fev</option>
                     <option value="03">Mar</option>
@@ -39,36 +42,18 @@
                     <option value="11">Nov</option>
                     <option value="12">Dez</option>
                 </select>
-                <button class="btn btn-success" ng-disabled="consulta.$invalid" ng-click="consultar(mes)">Consultar</button>
+                <select class="form-control ano_numero" name="mes" ng-model="data.ano" id="">
+                    <option value="2019">2019</option>
+                    <option value="2020">2020</option>
+                    <option value="2022">2022</option>
+                    <option value="2023">2023</option>
+                    <!-- <option value="2024">2024</option>
+                    <option value="2025">2025</option>
+                    <option value="2026">2026</option> -->
+                </select>
+                <button class="btn btn-success" ng-disabled="consulta.$invalid" ng-click="consultar(data)">Consultar</button>
             </form>
-			<!-- <table class="table" id="exibe_contas_importadas">
-				<thead>
-				  <tr>
-					<td>
-						filtrar por 
-						<input type="text" ng-model="descricao" placeholder="descrição">
-					</td>
-				  <tr>
-					<th scope="col">Data</th>
-					<th scope="col">Código</th>
-					<th scope="col">Tipo</th>
-					<th scope="col">Valor</th>
-					<th scope="col">Descrição</th>
-					<th scope="col"></th>
-				  </tr>
-				</thead>
-				<tbody>
-				  <tr ng-repeat="ci in contas_importadas | filter: descricao">
-					<td width="150">{{ci.data}}</td>
-					<td>{{ci.codigo}}</td>
-					<td>{{ci.tipo}}</td>
-					<td>{{ci.valor}}</td>
-					<td>{{ci.descricao}}</td>
-					<td><a class="btn btn-sm btn-warning" 
-						href="#/editar_conta_importada/{{ci.idconta}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-				  </tr>
-				</tbody>
-			  </table> -->
+
 		</div>
 		<div class="col-md-4"></div>
 		<div class="col-md-4"></div>
