Changed consutar to salvar.

--- a/views/relatorios.html
+++ b/views/relatorios.html
@@ -42,7 +42,7 @@
                     <option value="2022">2022</option>
                     <option value="2023">2023</option>
                 </select>
-                <button class="btn btn-success" ng-disabled="consulta.$invalid" ng-click="consultar(data)">Consultar</button>
+                <button class="btn btn-success" ng-disabled="consulta.$invalid" ng-click="salvar(data)">Salvar</button>
             </form>
 
 		</div>
