Changed valor_total to valor.

--- a/views/relatorios.html
+++ b/views/relatorios.html
@@ -56,7 +56,7 @@
                     <tr ng-repeat="rm in relatorioMensal">
                         <td width="100">{{rm.codigo}}</td>
                         <td>{{rm.descricao}}</td>
-                        <td align="right">{{rm.valor_total}}</td>
+                        <td align="right">{{rm.valor}}</td>
                     </tr>
                 </tbody>
             </table>
