--- a/views/plano_contas.html
+++ b/views/plano_contas.html
@@ -2,18 +2,17 @@
 
 </style>
 <div class="container-fluid" ng-controller="InicialCtrl">
-	<div class="row logoFluxojojn">
+	<div class="row logoFluxojojn" ng-controller="InicialCtrl">
 		<div class="col-md-6">
 			<div class="custojoin">
-				<!-- <img src="imgs/fluxojoin.png"> -->
 				Custojoin
 			</div>
 		</div>
 		<div class="col-md-3 nomeEmpresa">
-			<!-- <h4>{{empresa}}</h4> -->
+			<h4>{{empresa}}</h4>
 		</div>
 		<div class="col-md-3 nomeUsuario">
-			<h4>Olá, {{empresa}}</h4>
+			<h4>Olá, {{usuario}}</h4>
 		</div>
 	</div>
 
