--- a/views/contas_importadas.html
+++ b/views/contas_importadas.html
@@ -2,10 +2,9 @@
 
 </style>
 <div class="container-fluid" ng-controller="contas_importadasCtrl">
-	<div class="row logoFluxojojn">
+	<div class="row logoFluxojojn" ng-controller="InicialCtrl">
 		<div class="col-md-6">
 			<div class="custojoin">
-				<!-- <img src="imgs/fluxojoin.png"> -->
 				Custojoin
 			</div>
 		</div>
@@ -18,17 +17,20 @@
 	</div>
 
 	<div ng-include="'views/links.html'"></div>
+
+	<div id="tituloContasImportadas">
+		Contas Importadas
+	</div>
+	<div id="campo_de_consulta">
+		filtrar por 
+		<input id="descricaoo" type="text" ng-model="descricao" placeholder="descrição">
+		<input id="codigoo" type="text" ng-model="codigo" placeholder="código">
+	</div>
 	
 	<div class="row">
 		<div class="col-md-6">
 			<table class="table" id="exibe_contas_importadas">
 				<thead>
-				  <tr>
-					<td>
-						filtrar por 
-						<input type="text" ng-model="descricao" placeholder="descrição">
-						<input type="text" ng-model="codigo" placeholder="código">
-					</td>
 				  <tr>
 					<th scope="col">Data</th>
 					<th scope="col">Código</th>
@@ -49,7 +51,7 @@
 						href="#/editar_conta_importada/{{ci.idconta}}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 				  </tr>
 				</tbody>
-			  </table>
+			</table>
 		</div>
 		<div class="col-md-4"></div>
 		<div class="col-md-4"></div>
